ralph/runs/20260310-095349-M01/validation.log
==> test -f package.json
==> test -f Cargo.toml
==> test -f apps/web/package.json
==> test -f apps/indexer/package.json
==> test -f backend/factory/Cargo.toml
==> npm install
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'ic-automaton-launchpad@0.1.0',
npm WARN EBADENGINE   required: { node: '>=20.19.0', npm: '>=10' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'chai@6.2.2',
npm WARN EBADENGINE   required: { node: '>=18' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'cookie@1.1.1',
npm WARN EBADENGINE   required: { node: '>=18' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'esbuild@0.27.3',
npm WARN EBADENGINE   required: { node: '>=18' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'find-my-way@9.5.0',
npm WARN EBADENGINE   required: { node: '>=20' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'rollup@4.59.0',
npm WARN EBADENGINE   required: { node: '>=18.0.0', npm: '>=8.0.0' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'tinyexec@1.0.2',
npm WARN EBADENGINE   required: { node: '>=18' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'vite@7.3.1',
npm WARN EBADENGINE   required: { node: '^20.19.0 || >=22.12.0' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }
npm WARN EBADENGINE Unsupported engine {
npm WARN EBADENGINE   package: 'vitest@4.0.18',
npm WARN EBADENGINE   required: { node: '^20.0.0 || ^22.0.0 || >=24.0.0' },
npm WARN EBADENGINE   current: { node: 'v16.13.2', npm: '8.7.0' }
npm WARN EBADENGINE }

up to date, audited 153 packages in 440ms

36 packages are looking for funding
  run `npm fund` for details

found 0 vulnerabilities
==> npm run lint

> ic-automaton-launchpad@0.1.0 lint
> npm run lint --workspace @ic-automaton/shared && npm run lint --workspace @ic-automaton/indexer && npm run lint --workspace @ic-automaton/web


> @ic-automaton/shared@0.1.0 lint
> tsc -p tsconfig.json --noEmit


> @ic-automaton/indexer@0.1.0 lint
> tsc -p tsconfig.json --noEmit


> @ic-automaton/web@0.1.0 lint
> tsc -p tsconfig.json --noEmit

==> npm run build

> ic-automaton-launchpad@0.1.0 build
> npm run build --workspace @ic-automaton/shared && npm run build --workspace @ic-automaton/indexer && npm run build --workspace @ic-automaton/web


> @ic-automaton/shared@0.1.0 build
> tsc -p tsconfig.build.json


> @ic-automaton/indexer@0.1.0 build
> tsc -p tsconfig.build.json


> @ic-automaton/web@0.1.0 build
> tsc -p tsconfig.json --noEmit && vite build

You are using Node.js 16.13.2. Vite requires Node.js version 20.19+ or 22.12+. Please upgrade your Node.js version.
file:///Users/domwoe/Dev/projects/automaton-launchpad/node_modules/vite/dist/node/chunks/config.js:8
import fsp, { constants } from "node:fs/promises";
              ^^^^^^^^^
SyntaxError: The requested module 'node:fs/promises' does not provide an export named 'constants'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:124:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:181:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:281:24)
    at async CAC.<anonymous> (file:///Users/domwoe/Dev/projects/automaton-launchpad/node_modules/vite/dist/node/cli.js:626:28)
npm ERR! Lifecycle script `build` failed with error: 
npm ERR! Error: command failed 
npm ERR!   in workspace: @ic-automaton/web@0.1.0 
npm ERR!   at location: /Users/domwoe/Dev/projects/automaton-launchpad/apps/web 
